sas-core/main/default/objects/Proactivity__c/Proactivity__c.object-meta.xml
<CustomObject>
    <description>Information notice to be shown when a claim matches the criteria defined for the proactivity.</description>
    <label>Proactivity</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Proactivity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proactivities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>