sas-core/main/default/objects/Proactivity__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <description>Match all flights arriving to and/or departing the airport.</description>
    <inlineHelpText>Match all flights arriving to and/or departing the airport.</inlineHelpText>
    <label>Airport</label>
    <length>100</length>
    <type>Text</type>
</CustomField>