sas-core/main/default/objects/Proactivity__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Bank account number to match on.</description>
    <inlineHelpText>Bank account number to match on.</inlineHelpText>
    <label>Bank Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>