sas-core/main/default/objects/Proactivity__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <description>Booking reference to match on.</description>
    <inlineHelpText>Booking reference to match on.</inlineHelpText>
    <label>Booking Reference</label>
    <length>6</length>
    <type>Text</type>
</CustomField>