sas-core/main/default/objects/Proactivity__c/fields/Cancellation_Code__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Code__c</fullName>
    <label>Cancellation Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CancellationCode</valueSetName>
    </valueSet>
</CustomField>