sas-core/main/default/objects/Proactivity__c/fields/Claim_Firm__c.field-meta.xml
<CustomField>
    <fullName>Claim_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Firm</label>
    <referenceTo>Claim_Firm__c</referenceTo>
    <relationshipLabel>Proactivities</relationshipLabel>
    <relationshipName>Proactivities</relationshipName>
    <type>Lookup</type>
</CustomField>