sas-core/main/default/objects/Proactivity__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address to match on.</description>
    <inlineHelpText>Email address to match on.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>