sas-core/main/default/objects/Proactivity__c/fields/EuroBonus_Number__c.field-meta.xml
<CustomField>
    <fullName>EuroBonus_Number__c</fullName>
    <description>EuroBonus number to match on.</description>
    <inlineHelpText>EuroBonus number to match on.</inlineHelpText>
    <label>EuroBonus Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>