sas-core/main/default/objects/Proactivity__c/fields/Flight_Id__c.field-meta.xml
<CustomField>
    <fullName>Flight_Id__c</fullName>
    <description>Flight Id to match on. Format SK0931-2022-03-12, i.e. flight number followed by a dash and flight date.</description>
    <inlineHelpText>Flight Id to match on. Format SK0931-2022-03-12, i.e. flight number followed by a dash and flight date.</inlineHelpText>
    <label>Flight Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>