sas-core/main/default/objects/Proactivity__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>Date when the proactivity becomes relevant</description>
    <inlineHelpText>Date when the proactivity becomes relevant</inlineHelpText>
    <label>From Date</label>
    <type>Date</type>
</CustomField>