sas-core/main/default/objects/Proactivity__c/fields/Match_Flights_Arriving_To_Airport__c.field-meta.xml
<CustomField>
    <fullName>Match_Flights_Arriving_To_Airport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the proactivity should match flights arriving to the airport</description>
    <inlineHelpText>If the proactivity should match flights arriving to the airport</inlineHelpText>
    <label>Match Flights Arriving To Airport</label>
    <type>Checkbox</type>
</CustomField>