sas-core/main/default/objects/Proactivity__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>The message to be displayed for matching claims.</description>
    <inlineHelpText>The message to be displayed for matching claims.</inlineHelpText>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>