sas-core/main/default/objects/Proactivity__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <description>Passenger name to match on.</description>
    <inlineHelpText>Passenger name to match on.</inlineHelpText>
    <label>Passenger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>