sas-core/main/default/objects/Proactivity__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Phone number to match on.</description>
    <inlineHelpText>Phone number to match on.</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>