sas-core/main/default/objects/Proactivity__c/fields/PIR__c.field-meta.xml
<CustomField>
    <fullName>PIR__c</fullName>
    <description>PIR number to match on.</description>
    <inlineHelpText>PIR number to match on.</inlineHelpText>
    <label>PIR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>