sas-core/main/default/objects/Proactivity__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>Date when the proactivity stops being relevant</description>
    <inlineHelpText>Date when the proactivity stops being relevant</inlineHelpText>
    <label>To Date</label>
    <type>Date</type>
</CustomField>