sas-core/main/default/objects/Proactivity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>For differentiating between the different types of proactivities</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Major Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>