sas-core/main/default/objects/Proactivity__c/validationRules/From_Date_Error_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Date_Error_Message</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(NOT(ISBLANK(Airport__c)), NOT(ISPICKVAL( Cancellation_Code__c ,&quot;&quot;))), ISBLANK(From_Date__c))</errorConditionFormula>
    <errorDisplayField>From_Date__c</errorDisplayField>
    <errorMessage>Required if an advanced matcher is used</errorMessage>
</ValidationRule>